# Planalyze

./: README.md  ReadMe.txt  VCC宣传资料.docx
capture/: CMakeLists.txt
capture/cmake/: Find3rdParty.cmake
capture/include/: image_grabber.h  image_viewer.h  main_window.h  pattern_projector.h  plain_text_viewer.h  turn_table.h
capture/src/: image_grabber.cpp  image_viewer.cpp  main_window.cpp  parameter_dialog.cpp  plain_text_viewer.cpp
compute/: CMakeLists.txt
compute/analyze/: CMakeLists.txt
compute/analyze/include/: file_system.h  forward.h  main_window.h  progress_bar.h
compute/analyze/src/: log_viewer_widget.cpp  main_window.cpp  mesh_model.cpp  organ_leaf_smooth.cpp  point_cloud.cpp
compute/capture/include/: parameter.h  parameter_dialog.h
compute/capture/resources/: main_window.qrc  main_window.ui
compute/capture/src/: main.cpp  main_window.cpp  pattern_projector.cpp
compute/cmake/: Find3rdParty.cmake
compute/pcl_wrapper/: CMakeLists.txt
compute/pcl_wrapper/include/: pcl_wrapper_types.h
compute/pcl_wrapper/src/: pcl_wrapper.cpp
compute/pde/: CMakeLists.txt
compute/pde/include/: adapter_widget.h  cgal_utility.h  color_map.h  file_system_model.h  information.h  light_source.h  main_window.h  organ.h  parameter_manager.h  povray_visitor.h  resize_handler.h  sketch_handler.h  stateset_manipulator.h  update_callback.h
compute/pde/resources/: main_window.ui
compute/pde/src/: Information.cpp  cgal_utility.cpp  color_map.cpp  light_source.cpp  main_window.cpp  organ.cpp  organ_control_flow.cpp  organ_stem_smooth.cpp  parameter_manager.cpp  progress_bar.cpp  registrator.cpp  resize_handler.cpp  status_io.cpp  task_dispatcher.cpp  update_callback.cpp
convert/: CMakeLists.txt
convert/cmake/: Find3rdParty.cmake
convert/src/: main.cpp
data/: synthetic-anthurium.7z  synthetic-flat.7z  synthetic-melon.7z
dll version/: MatchingDll.cpp
planalyze/: CMakeLists.txt
planalyze/analyze/: CMakeLists.txt
planalyze/analyze/cmake/: Find3rdParty.cmake
planalyze/analyze/include/: axis_indicator.h  log_viewer_widget.h  point_cloud.h
planalyze/analyze/resources/: main_window.ui
planalyze/analyze/src/: file_system_model.cpp  organ_classify_leaf_stem.cpp  renderable.cpp  snapshot_handler.cpp
planalyze/capture/: CMakeLists.txt
planalyze/capture/cmake/: FindQextserialport.cmake
planalyze/capture/resources/: main_window.rc
planalyze/capture/src/: turn_table.cpp
planalyze/pcl_wrapper/: CMakeLists.txt
planalyze/pcl_wrapper/include/: pcl_wrapper_exports.h
planalyze/pcl_wrapper/src/: pcl_wrapper.cpp
planalyze/planalyze/: CMakeLists.txt
planalyze/planalyze/cmake/: Find3rdParty.cmake  FindQwt.cmake
planalyze/planalyze/include/: cgal_types.h  color_map.h  file_system_model.h  forward.h  main_window.h  mesh_model.h  organ.h  osg_viewer_widget.h  parameter.h  parameter_manager.h  plain_text_viewer.h  point_cloud.h  registrator.h  renderable.h  sketch_handler.h  snapshot_handler.h  statistics.h  statistics_viewer_widget.h  task_dispatcher.h
planalyze/planalyze/resources/: main_window.ui
planalyze/planalyze/src/: adapter_widget.cpp  axis_indicator.cpp  color_map.cpp  file_system.cpp  file_system_model.cpp  file_viewer_widget.cpp  image_grabber.cpp  log_viewer_widget.cpp  main_window.cpp  mesh_model.cpp  organ.cpp  organ_classify_leaf_stem.cpp  organ_control_flow.cpp  organ_leaf_decompose.cpp  organ_leaf_smooth.cpp  organ_stem_decompose.cpp  organ_stem_smooth.cpp  osg_viewer_widget.cpp  parameter_manager.cpp  pattern_projector.cpp  plain_text_viewer.cpp  point_cloud.cpp  point_cloud_statistics.cpp  povray_visitor.cpp  registrator.cpp  sketch_handler.cpp  stateset_manipulator.cpp  statistics.cpp  statistics_viewer_widget.cpp  status_io.cpp  task_dispatcher.cpp  turn_table.cpp
source/: FirstMatching.h  Preprocessing.h  SecondMatching.h  SimilarityDegree.h  main.cpp
